fix: overlapping links on bigger screens
Start displaying 3 projects in row from 900px breakpoint and
make link font 14px after this breakpoint.

--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,12 @@ a, h3 {
 	}
 }
 
-@media screen and (min-width: 850px) {
+@media screen and (min-width: 900px) {
 	.project {
 		width: calc((100% - 40px)/3);
+	}
+
+	a {
+		font-size: 14px;
 	}
 }
